[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Command-line utilities to record and replay input sent to a terminal session."
keywords = ["input", "terminal", "TTY", "record"]
license = "MIT"
name = "record"
version = "0.2.3"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.0.5"
pty = "0.2"
pty-shell = {git = "https://github.com/mjarkk/pty-shell"}
time = "0.3"

[patch.crates-io]
pty = { git = "https://github.com/ethanpailes/pty-rs" }
